# jit_compiler_pl0

./: .gitlab-ci.yml  CMakeLists.txt  code.txt
pljit/: CMakeLists.txt  main.cpp  pljit.cpp  pljit.hpp
pljit/ast/: AST.cpp  AST.hpp  ASTNode.cpp  ASTNode.hpp  ASTVisitor.hpp  DotASTVisitor.cpp  DotASTVisitor.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.hpp
pljit/function/: PljitFunction.cpp  PljitFunction.hpp  pljit.cpp  pljit.hpp
pljit/ir/: EvalContext.cpp  EvalContext.hpp  Evaluate.cpp  Evaluate.hpp  Optimization.cpp  Optimization.hpp  OptimizeConstPropagation.cpp  OptimizeConstPropagation.hpp  OptimizeDeadCode.cpp  OptimizeDeadCode.hpp
pljit/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
pljit/parser/: DotPTVisitor.cpp  DotPTVisitor.hpp  PTNode.cpp  PTNode.hpp  PTVisitor.hpp  Parser.cpp  Parser.hpp
pljit/source/: SourceCode.cpp  SourceCode.hpp  SourceReference.cpp  SourceReference.hpp
test/: CMakeLists.txt
test/ast/: TestAst.cpp
test/function/: TestFunctionHandle.cpp
test/ir/: TestEvaluate.cpp  TestOptimizationConstPropagation.cpp  TestOptimizationDeadCode.cpp
test/lexer/: TestLexer.cpp
test/parser/: TestParser.cpp
